# QQ-mac-chathistory

./: Cargo.toml  README.md
docs/: automation-roadmap.md  macos-key-extraction.md  research-workflow.md  tauri-core-architecture.md
src/: lib.rs
