[package]
name = "qq-mac-export-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1"
ntdb_unwrap = { git = "https://github.com/artiga033/ntdb_unwrap" }
rusqlite = { version = "0.38.0", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
